# mirror

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  README.rst  configure.py  mirror-config  toolchain.cmake.bak
doc/: CMakeLists.txt
doc/diagram/: factory_generator.puml
doc/doxygen/: CMakeLists.txt  Doxyfile-common  Doxyfile-common.in  Doxyfile-html  Doxyfile-html.in  Doxyfile-xml  Doxyfile-xml.in  footer.html  header.html  mirror.css
doc/howto/: workflow.rst
doc/html/: boostbook.css  doc_HTML.manifest  implement.html  implementation.html  index.html  lagoon.html  mirror.html  papers.html  puddle.html  reflexpr.html  refltool.html
doc/latex/: CMakeLists.txt  LaTeX.cmake  P2560Rx.tex  beamer_mirror.tex.in  beamercolorthememirror-light.sty.in  beamercolorthememirror.sty.in  beamerouterthememirror.sty.in  cpponsea.tex  deserialize_class.puml  factory_on_P2320.tex  meeting_cpp.tex  reflection_api.tex  rpc_class.puml  rpc_sequence.puml  serialize_class.puml  use_cases.tex  value_vs_type_based.tex
doc/logo/: CMakeLists.txt
doc/quickbook/: Jamroot.jam  Makefile  boostbook.css  implement.qbk  implementation.qbk  index.cpp  index.qbk  lagoon.qbk  mirror.qbk  papers.qbk  puddle.qbk  reflexpr.qbk  refltool.qbk
example/: CMakeLists.txt  examples.cmake  gen_puml_diagram.cpp  next_weekday.cpp  unpack_range.cpp
example/dazzle/: 003_hello_world.cpp  004_traits.cpp  005_tie_data_members.cpp  006_enum_to_string.cpp  007_full_names.cpp  007_string_to_enum.cpp  008_print_data_members.cpp  010_print_member_types.cpp  013_to_json.cpp  014_print_data_members.cpp  CMakeLists.txt
example/factory/: CMakeLists.txt  iostream.cpp  rapidjson.cpp
example/lagoon/: 001_hello_world.cpp  004_traits.cpp  007_enum_to_string.cpp  010_list_data_members.cpp  010_member_tree.cpp  010_string_to_enum.cpp  012_member_tree.cpp  CMakeLists.txt
example/mire/: CMakeLists.txt  mire_examples.cmake
example/mirror/: 001_hello_world.cpp  002_hello_world.cpp  003_hello_world.cpp  004_traits.cpp  005_enum_to_string.cpp  005_string_to_enum.cpp  005_tie_data_members.cpp  006_enum_to_string.cpp  006_string_to_enum.cpp  007_full_names.cpp  007_print_data_members.cpp  007_string_to_enum.cpp  008_full_names.cpp  010_print_member_types.cpp  011_to_json.cpp  013_equality_compare.cpp  014_print_data_members.cpp  025_to_rapidjson.cpp  CMakeLists.txt  Example.cmake  amount_of_foo.cpp  applicable_ops.cpp  are_consecutive.cpp  are_sorted_by_name.cpp  are_sorted_by_size.cpp  chai_on_mirror.cpp  ctre_integer_concept.cpp  dependency_injection.cpp  enum_min_max.cpp  expression.cpp  fake_rest_api.cpp  fake_rpc.cpp  fetch_from_sqlite.cpp  filter.cpp  find_if.cpp  find_longest_name.cpp  from_rapidjson.cpp  gen_puml_diagram.cpp  good_example.cpp  group_by.cpp  (+32 more)
example/puddle/: 001_hello_world.cpp  002_hello_world.cpp  003_hello_world.cpp  004_traits.cpp  005_enum_to_string.cpp  005_tie_data_members.cpp  006_enum_to_string.cpp  006_string_to_enum.cpp  007_full_names.cpp  007_string_to_enum.cpp  008_print_data_members.cpp  010_print_member_types.cpp  013_to_json.cpp  014_print_data_members.cpp  CMakeLists.txt
example/reflexpr/: 001_hello_world.cpp  002_concepts.cpp  003_base_names.cpp  003_class_members.cpp  003_specifiers.cpp  003_unpack_sequence.cpp  004_aliases.cpp  004_class_members.cpp  005_base_classes.cpp  005_class_members.cpp  005_enum_to_string.cpp  006_aliases.cpp  006_enum_to_string.cpp  006_string_to_enum.cpp  007_string_to_enum.cpp  008_enum_to_string.cpp  009_enum_to_string.cpp  010_string_to_enum.cpp  040_full_type_name.cpp  CMakeLists.txt  Example.cmake  dependency_injection.cpp  enum_to_string.cpp  enum_to_string_map.cpp  named_parameters.cpp  string_to_enum.cpp
example/refltool/: 005_list_enum.cpp  006_string_to_enum.cpp  012_member_cmp.cpp  014_member_hash.cpp  018_to_rapidjson.cpp  030_from_rapidjson.cpp  032_from_rapidxml.cpp  CMakeLists.txt
include/: CMakeLists.txt
include/dazzle/: envelope.hpp  int_const.hpp  metaobject.hpp  none.hpp  range.hpp  reflection.hpp  sequence_ops.hpp  string.hpp  type.hpp  wrap.hpp
include/lagoon/: any_constant.hpp  base_registry.hpp  concrete_metaobject.hpp  concrete_sequence.hpp  concrete_storage.hpp  fingerprint.hpp  member_sequence.hpp  metaobject.hpp  metaobject_registry.hpp  metaobject_traits.hpp  none_metaobject.hpp  none_sequence.hpp  proxy_metaobject.hpp  tribool.hpp
include/mire/: ct.hpp  ct_counter.hpp  mirror.hpp  reg.hpp  tags.hpp
include/mirror/: CMakeLists.txt  add.hpp  all.hpp  all_ce.hpp  and.hpp  apply.hpp  apply_on.hpp  base_type.hpp  bitfield.hpp  branch_predict.hpp  c_str.hpp  chaiscript.hpp  concat.hpp  conditional.hpp  contains.hpp  ctre_all.hpp  ctre_match.hpp  dereference.hpp  diagnostic.hpp  element_type.hpp  empty.hpp  enable_if.hpp  ends_with.hpp  enum_utils.hpp  equal.hpp  extract.hpp  factory.hpp  fix_for_doc.sed  foldl.hpp  for_each.hpp  from_string.hpp  full_name.hpp  get.hpp  get_access_specifier.hpp  get_aliased.hpp  get_base_class.hpp  get_base_classes.hpp  get_base_name.hpp  get_constant.hpp  get_data_members.hpp  (+108 more)
include/puddle/: enable_if.hpp  hash.hpp  int_const.hpp  meta_alias_ops.hpp  meta_class_ops.hpp  meta_constant_ops.hpp  meta_enum_ops.hpp  meta_inheritance_ops.hpp  meta_named_ops.hpp  meta_record_ops.hpp  meta_scoped_ops.hpp  meta_specifier_ops.hpp  meta_type_ops.hpp  meta_typed_ops.hpp  meta_variable_ops.hpp  metaobject_ops.hpp  none.hpp  range.hpp  reflection.hpp  sequence.hpp  sequence_ops.hpp  source_info_ops.hpp  source_location.hpp  specifier_ops.hpp  string.hpp  traits.hpp  type.hpp
include/reflbase/: reflbase.hpp  reflexpr.hpp  reflfake.hpp  sequence.hpp  string.hpp
include/reflexpr/: CMakeLists.txt
include/refltool/: data_member_cmp.hpp  enum_to_string.hpp  from_rapidjson.hpp  from_rapidxml.hpp  hash_data_members.hpp  string_to_enum.hpp  tie_data_members.hpp  tie_enumerators.hpp  to_rapidjson.hpp
source/: CMakeLists.txt
test/: CMakeLists.txt  testing.cmake
test/dazzle/: CMakeLists.txt  contains_r.cpp  ends_with_r.cpp  for_each_r.cpp  get_element_r.cpp  (+12 more)
(+1453 files in other folders)
